<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Live Dictionary</string>
    <string name="hello_world">Hello world!</string>
	<string name="show_answer">Show Answer</string>
	<string name="easy_translation">Easy!</string>
    <string name="difficult_translation">Help me learn it!</string>
    <string name="export_data">Export Data</string>
    <string name="manage_labels">Manage Labels</string>
    <string name="add_label">Add Label</string>
    <string name="add_translation">Add translation</string>
    <string name="cancel">Cancel</string>
    <string name="foreign_word">Foreign</string>
    <string name="native_word">Native</string>
    <string name="delete_translation">Delete Translation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update_translation">Update Translation</string>
    <string name="import_data">Import Data</string>
    <string name="delete_label">Delete Label</string>
    <string name="labeled">Labelled</string>
    <string name="asked_too_often_translation">asked too often</string>
</resources>

