<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/add_translation_button"
          android:title="@string/add_translation"
          android:showAsAction="never" />
    <item android:id="@+id/update_translation_button"
          android:title="@string/update_translation"
          android:showAsAction="never" />
    <item android:id="@+id/delete_translation_button"
          android:title="@string/delete_translation"
          android:showAsAction="never" />
    <item android:id="@+id/import_data_button"
          android:title="@string/import_data"
          android:showAsAction="never" />
    <item android:id="@+id/export_data_button"
          android:title="@string/export_data"
          android:showAsAction="never" />
    <item android:id="@+id/manage_labels_button"
          android:title="@string/manage_labels"
          android:showAsAction="never" />
    <item android:id="@+id/add_label_button"
          android:title="@string/add_label"
          android:showAsAction="never" />
</menu>